<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/edit_name"
        android:ems="10"
        android:id="@+id/edit_first_name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/last_name"
        android:ems="10"
        android:id="@+id/edit_last_name" />

    <Button
        android:layout_width="78dp"
        android:layout_height="wrap_content"
        android:text="@string/succes"
        android:id="@+id/ok_button"
        android:layout_gravity="center_horizontal" />
</LinearLayout>